# swganh-docs

./: .gitignore  CMakeLists.txt  README.md  conf.py.in  index.rst
book/: architecture.rst  events.rst  index.rst  installation.rst  installation_linux.rst  installation_windows.rst  map.rst.inc  services.rst
contributing/: Git Setup.rst  bugs.rst  index.rst  issues.rst  license.rst  map.rst.inc  patches.rst  pull_requests.rst  tests.rst
contributing/programmers/: standards.rst
cookbook/: index.rst  map.rst.inc
cookbook/login/: custom_authentication.rst
cookbook/plugins/: best_practices.rst  map.rst.inc
cookbook/scripting/: command_scripts.rst
old/: CMakeLists.txt
old/book/: architecture.rst  index.rst  installation.rst  installation_client.rst  installation_docs.rst  installation_linux.rst  installation_windows.rst  map.rst.inc  plugins.rst  scripting.rst
old/contributing/: index.rst  license.rst  map.rst.inc  pull_requests.rst  security.rst  standards.rst  tests.rst
old/cookbook/: map.rst.inc
old/cookbook/plugins/: best_practices.rst
old/cookbook/scripting/: command_scripts.rst
old/pythonapi/: command.rst  creature.rst  index.rst  kernel.rst  map.rst.inc  object.rst  object_controller.rst  objects.rst  player.rst  tangible.rst  utility.rst
old/tools/windows/: user_project.vcxproj.in
pythonapi/: command.rst  index.rst  kernel.rst  map.rst.inc  object_controller.rst  player.rst  services.rst
